# netcat

./: .arch-inventory  Changelog  Makefile.am  README  README-alpha  build.sh  configure.ac  memcmp.c  nc.1  netcat.c  netcat.texi  poll.c  poll_.h
config/: .arch-inventory  .gitignore
data/: data  rservice  xor
